--- a/styles.css
+++ b/styles.css
@@ -61,10 +61,9 @@ body {
 }
 
 #result {
-  position: fixed;
-  top: 10%;
-  left: 10%;
-  transform: translate(-50%, -50%);
+  position: absolute;
+  top: 25%;
+
   height: 250px;
   width: 400px;
   background-color: #171717;
@@ -149,7 +148,6 @@ button {
 
 #histories {
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-around;
 }
 
@@ -186,7 +184,7 @@ button {
     width: 100%;
   }
 
-  .card {
+  /* .card {
     flex-direction: column;
-  }
+  } */
 }
